examples/datalog/15_arithmetic/26_subtraction.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_subtract
Knowledge graph 'test_subtract' created.
Switched to knowledge graph: test_subtract
> .kg use test_subtract
Switched to knowledge graph: test_subtract
> +pairs[(100, 30), (50, 20), (75, 75)].
Inserted 3 fact(s) into 'pairs'.
> diff(A, B, Result) :- pairs(A, B), Result = A - B.
Script error: Parse error: Invalid term: 'A - B'
