examples/datalog/15_arithmetic/26_subtraction.dl
% Test: Subtraction operations
% Expected: Handle subtraction correctly
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_subtract
.kg use test_subtract

+pairs[(100, 30), (50, 20), (75, 75)].

% Compute difference
diff(A, B, Result) :- pairs(A, B), Result = A - B.

?- diff(A, B, R).

.kg use default
.kg drop test_subtract
